style: fix z-index conflict between navbar and carousel

--- a/src/components/EmblaCarousel/EmblaCarousel.module.css
+++ b/src/components/EmblaCarousel/EmblaCarousel.module.css
@@ -47,7 +47,7 @@
 
 .cardsCarousel .embla__buttonPrev,
 .cardsCarousel .embla__buttonNext {
-  z-index: 2;
+  z-index: 0;
 }
 
 .embla__buttonPrev.filled,
