--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -77,3 +77,9 @@
     font-size: 2.5rem;
   }
 }
+
+@media (width >= 850px) {
+  .container {
+    z-index: 2;
+  }
+}
